<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

            <TextView
                android:id="@+id/product_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/tableLayout1"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_buy"
                app:layout_editor_absoluteX="87dp"
                app:layout_editor_absoluteY="82dp"
                />


            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/product_type"
                app:layout_constraintEnd_toStartOf="@id/btn_buy"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_7"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_7"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_8"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_8"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_9"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_9"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_4"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_4"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_5"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_5"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_6"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_6"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_1"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_2"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_2"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_3"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_3"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_C"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/c"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_0"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#9C528B"
                        android:text="@string/_0"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:cornerRadius="36dp"
                        />
                </TableRow>
            </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        app:cornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/total"
        />


            <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/buy"
                android:layout_marginEnd="10dp"
                app:cornerRadius="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tableLayout1"                app:layout_constraintTop_toTopOf="@+id/tableLayout1"
                app:layout_constraintBottom_toBottomOf="@+id/tableLayout1"

                />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/quantity"
                android:textSize="20sp"
                android:layout_marginStart="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout1"
                />

            <ListView
                android:id="@+id/item_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </ListView>





</androidx.constraintlayout.widget.ConstraintLayout>